<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.teams.TeamActivity">

    <Button
        android:id="@+id/btn_team_activity_pending_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_invites"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_team_activity_invite_team_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_team_member"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_team_activity_see_teammate_routes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_see_teammates_routes"
        android:layout_marginTop="@dimen/recycle_view_margin"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_scheduled_walks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_title_scheduled_walks"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_team_activity_see_teammate_routes"
        app:layout_constraintBottom_toTopOf="@id/list_members_in_team" />

    <TextView
        android:id="@+id/title_teammates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_teammates_in_team"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/details_indent"
        android:layout_marginTop="@dimen/details_indent"
        app:layout_constraintTop_toBottomOf="@id/btn_scheduled_walks"
        app:layout_constraintBottom_toTopOf="@id/list_members_in_team"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ListView
        android:id="@+id/list_members_in_team"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/textview_border"
        app:layout_constraintTop_toBottomOf="@id/title_teammates"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/colorPrimaryDark"
        app:itemTextColor="#000000"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/text_no_teammates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_teammates_in_team"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/title_teammates"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>