...
            android:visibility="gone"
            android:textSize="@dimen/details_size"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_starting_loc"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/date"
            android:textSize="@dimen/details_size"
...
            android:focusable="true"
            android:textSize="@dimen/details_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_date"/>

    <LinearLayout
        android:id="@+id/schedule_propose_linear_layout_status_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableStart="@drawable/ic_event_available_black_24dp"
            android:text="@string/schedule" />

        <Button
            android:id="@+id/schedule_propose_btn_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
...
